@@ -22,7 +22,9 @@ import os
 import errno
 import time
 import random
+
 from ._compat import to_unicode
+from .filesystem import get_filesystem_encoding
 
 
 can_rename_open_file = False
@@ -38,8 +40,8 @@ if os.name == 'nt':  # pragma: no cover
         _MoveFileEx = ctypes.windll.kernel32.MoveFileExW
 
         def _rename(src, dst):
-            src = to_unicode(src, sys.getfilesystemencoding())
-            dst = to_unicode(dst, sys.getfilesystemencoding())
+            src = to_unicode(src, get_filesystem_encoding())
+            dst = to_unicode(dst, get_filesystem_encoding())
             if _rename_atomic(src, dst):
                 return True
             retry = 0
